# snake

./: CMakeLists.txt
raylib/: CMakeLists.txt
src/: main.cpp
